[package]
edition = "2021"
name = "molarmanful_lin-bindings"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
is_prime = "2.0.9"
napi = { version = "2.7.0", default-features = false, features = ["napi6"] }
napi-derive = "2.7.0"
scanpw = "0.1.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
